General: Fix two issues in the dark mode (#5107)

--- a/src/main/webapp/content/scss/themes/theme-dark.scss
+++ b/src/main/webapp/content/scss/themes/theme-dark.scss
@@ -194,6 +194,10 @@ html {
     .ace_comment {
         color: #8497ce;
     }
+
+    .ace_active-line {
+        background: transparentize(#44475a, 0.7);
+    }
 }
 
 // ==================
